partly fix broken layout, missing scroll

--- a/Client/src/app/main/content/day-view/day-view.component.css
+++ b/Client/src/app/main/content/day-view/day-view.component.css
@@ -9,6 +9,11 @@
   margin: 0;
 }
 
-li {
-  min-width: 200px;
+.track-day {
+  float: left;
+  min-width: 250px;
+}
+
+.track-day>h1{
+  text-align: center;
 }
